@@ -1,7 +1,9 @@
 All notable changes to this package will be documented in this file. For a
 complete changelog, see https://github.com/JolleJolles/pythutils/commits/
 
-Not yet integrated
+Latest changes:
+    * enabled sameline printing in lineprint function
+    * fixed varname in seqcount function
 
 2020-02-17 - version 1.2.0
     * Added get_spaced_colors function for getting a list of equally spaced
